--- a/style.css
+++ b/style.css
@@ -3,3 +3,61 @@
     padding: 0;
     font-family: "Tiny5", sans-serif;
 }
+
+body {
+    background-color: gray;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+.inside-container {
+    background-color: gray;
+    color: blanchedalmond;
+    width: 360px;
+    height: 600px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 2px solid black;
+}
+
+.start {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.daily {
+    font-size: 70px;
+}
+
+.todo {
+    font-size: 80px;
+    padding-bottom: 50px;
+}
+
+.line1,
+.line2 {
+    font-size: 26px;
+}
+
+.add-btn {
+    padding-top: 30px;
+}
+
+.add-btn button {
+    font-size: 40px;
+    padding: 10px 20px;
+    border-radius: 30px;
+    cursor: pointer;
+    background-color: blanchedalmond;
+    border: 3px solid black;
+}
+
+.add-btn button:active {
+    font-size: 30px;
+    margin-top: 12px;
+}
