--- a/style.css
+++ b/style.css
@@ -62,9 +62,9 @@ body {
     margin-top: 12px;
 }
 
-.start {
+/* .start {
     display: none;
-}
+} */
 
 .add-to-list {
     height: 500px;
@@ -91,12 +91,16 @@ body {
     width: 80%;
 }
 
+.all-tasks {
+    padding-bottom: 12px;
+}
+
 .added-task {
     font-size: 22px;
     display: flex;
     align-items: center;
     gap: 10px;
-    padding-bottom: 12px;
+    padding-bottom: 5px;
 }
 
 .added-name {
@@ -145,14 +149,6 @@ body {
     background-color: gainsboro;
 } */
 
-
-
-
-
-
-
-
-
 .done-btn {
     padding-bottom: 20px;
 }
@@ -174,4 +170,8 @@ body {
     height: 30px;
     display: flex;
     gap: 10px;
+}
+
+.hide {
+    display: none;
 }
